force-app/main/default/objects/Order/fields/Event_Address__c.field-meta.xml
<CustomField>
    <fullName>Event_Address__c</fullName>
    <label>Event Address</label>
    <type>Address</type>
</CustomField>