force-app/main/default/objects/Order/validationRules/Event_date_cannot_be_in_the_past.validationRule-meta.xml
<ValidationRule>
    <fullName>Event_date_cannot_be_in_the_past</fullName>
    <active>true</active>
    <errorConditionFormula>Event_Date__c &lt; NOW()</errorConditionFormula>
    <errorDisplayField>Event_Date__c</errorDisplayField>
    <errorMessage>Complete this field with a correct date in the future.</errorMessage>
</ValidationRule>