force-app/main/default/objects/Order/validationRules/Final_price_cannot_be_negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Final_price_cannot_be_negative</fullName>
    <active>true</active>
    <errorConditionFormula>Final_Price__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Final_Price__c</errorDisplayField>
    <errorMessage>Complete this field with a positive amount.</errorMessage>
</ValidationRule>