force-app/main/default/objects/Order/validationRules/Payment_status_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_status_required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT( Payment_Status__c ))</errorConditionFormula>
    <errorDisplayField>Payment_Status__c</errorDisplayField>
    <errorMessage>Complete this field with a payment status.</errorMessage>
</ValidationRule>